refactor: PostService의 findQuestionList() 메서드에서 QnaDTO로 변환하는 로직 메서드로 추출